feat(DropShadow): create DropShadow animation extension

--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -60,6 +60,7 @@
     <Compile Include="EffectDirectPropertyChangeDefinition.cs" />
     <Compile Include="Extensions\AnimationExtensions.Blur.cs" />
     <Compile Include="Extensions\AnimationExtensions.cs" />
+    <Compile Include="Extensions\AnimationExtensions.DropShadow.cs" />
     <Compile Include="Extensions\AnimationExtensions.Fade.cs" />
     <Compile Include="Extensions\AnimationExtensions.Offset.cs" />
     <Compile Include="Extensions\AnimationExtensions.Rotate.cs" />
