--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -73,8 +73,9 @@
     <Compile Include="BladeView\BladeItem.Events.cs" />
     <Compile Include="SlidableListItem\SwipeStatus.cs" />
     <Compile Include="SlidableListItem\SwipeStatusChangedEventArgs.cs" />
-    <Compile Include="TextBoxMask\TextBoxMask.cs" />
-    <Compile Include="TextBoxMask\TextBoxMask.Properties.cs" />
+    <Compile Include="TextBoxMask\TextBoxMasks.RegexMask.cs" />
+    <Compile Include="TextBoxMask\TextBoxMasks.cs" />
+    <Compile Include="TextBoxMask\TextBoxMasks.Properties.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
     <None Include="project.json" />
   </ItemGroup>
