--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -74,8 +74,8 @@
     <Compile Include="MasterDetailsView\MasterDetailsViewState.cs" />
     <Compile Include="SlidableListItem\SwipeStatus.cs" />
     <Compile Include="SlidableListItem\SwipeStatusChangedEventArgs.cs" />
-    <Compile Include="TextBoxMask\TextBoxMasks.cs" />
-    <Compile Include="TextBoxMask\TextBoxMasks.Properties.cs" />
+    <Compile Include="TextBoxMask\TextBoxMask.cs" />
+    <Compile Include="TextBoxMask\TextBoxMask.Properties.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
     <None Include="project.json" />
   </ItemGroup>
