Reading wrap panel after commiting

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BladeView\BladeControl.cs" />
     <Compile Include="BladeView\BladeItem.cs" />
     <Compile Include="BladeView\BladeItem.Properties.cs" />
+    <Compile Include="BladeView\BladeMode.cs" />
     <Compile Include="BladeView\BladeView.cs" />
     <Compile Include="BladeView\BladeView.Events.cs" />
     <Compile Include="BladeView\BladeView.Properties.cs" />
@@ -74,8 +75,11 @@
     <Compile Include="MasterDetailsView\MasterDetailsViewState.cs" />
     <Compile Include="SlidableListItem\SwipeStatus.cs" />
     <Compile Include="SlidableListItem\SwipeStatusChangedEventArgs.cs" />
-    <Compile Include="WrapPanel\WrapPanel.Data.cs" />
+    <Compile Include="SurfaceDialTextboxHelper\SurfaceDialTextboxHelper.cs" />
+    <Compile Include="TextBoxMask\TextBoxMask.cs" />
+    <Compile Include="TextBoxMask\TextBoxMask.Properties.cs" />
     <Compile Include="WrapPanel\WrapPanel.cs" />
+    <Compile Include="WrapPanel\WrapPanel.Data.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
     <None Include="project.json" />
   </ItemGroup>
