--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -68,6 +68,38 @@
     <Compile Include="HamburgerMenu\MenuItems\HamburgerMenuImageItem.cs" />
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.cs" />
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.Properties.cs" />
+    <Compile Include="MarkdownTextBlock\Display\ILinkRegister.cs" />
+    <Compile Include="MarkdownTextBlock\Display\MarkdownTable.cs" />
+    <Compile Include="MarkdownTextBlock\Display\XamlRenderer.cs" />
+    <Compile Include="MarkdownTextBlock\Helpers\Common.cs" />
+    <Compile Include="MarkdownTextBlock\Helpers\DebuggingReporter.cs" />
+    <Compile Include="MarkdownTextBlock\OnMarkdownLinkTappedArgs.cs" />
+    <Compile Include="MarkdownTextBlock\OnMarkdownReadyArgs.cs" />
+    <Compile Include="MarkdownTextBlock\Helpers\SmartWeakEvent.cs" />
+    <Compile Include="MarkdownTextBlock\MarkdownTextBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\CodeBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\HeaderBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\HorizontalRuleBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\LinkReferenceBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\ListBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\ParagraphBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\QuoteBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Blocks\TableBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\BoldTextInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\CodeInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\HyperlinkInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\IInlineContainer.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\IInlineLeaf.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\ILinkElement.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\ItalicTextInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\MarkdownLinkInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\StrikethroughTextInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\SuperscriptTextInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\Inlines\TextRunInline.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\MarkdownBlock.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\MarkdownDocument.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\MarkdownElement.cs" />
+    <Compile Include="MarkdownTextBlock\Parse\MarkdownInline.cs" />
     <Compile Include="MasterDetailsView\MasterDetailsView.cs" />
     <Compile Include="MasterDetailsView\MasterDetailsView.Events.cs" />
     <Compile Include="MasterDetailsView\MasterDetailsView.Properties.cs" />
@@ -79,6 +111,7 @@
     <Compile Include="SurfaceDialTextboxHelper\SurfaceDialTextboxHelper.cs" />
     <Compile Include="TextBoxMask\TextBoxMask.cs" />
     <Compile Include="TextBoxMask\TextBoxMask.Properties.cs" />
+    <Content Include="MarkdownTextBlock\About.txt" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
     <None Include="project.json" />
   </ItemGroup>
@@ -135,6 +168,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="ImageEx\ImageEx.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MarkdownTextBlock\MarkdownTextBlock.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -200,6 +237,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Properties\Microsoft.Windows.Toolkit.UI.Controls.rd.xml" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
