--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -101,10 +101,18 @@
     <Compile Include="Services\Facebook\FacebookPhoto.cs" />
     <Compile Include="Services\Facebook\FacebookPictureData.cs" />
     <Compile Include="Services\Facebook\FacebookPlatformImageSource.cs" />
+    <Compile Include="Services\OneDrive\OneDriveConstants.cs" />
+    <Compile Include="Services\OneDrive\OneDriveHelper.cs" />
+    <Compile Include="Services\OneDrive\OneDriveItem.cs" />
     <Compile Include="Services\OneDrive\OneDriveEnums.cs" />
+    <Compile Include="Services\OneDrive\OneDriveItemExtension.cs" />
+    <Compile Include="Services\OneDrive\OneDriveParentReference.cs" />
     <Compile Include="Services\OneDrive\OneDriveService.cs" />
+    <Compile Include="Services\OneDrive\OneDriveStorageFile.cs" />
     <Compile Include="Services\OneDrive\OneDriveStorageFolder.cs" />
     <Compile Include="Services\OneDrive\OneDriveStorageItem.cs" />
+    <Compile Include="Services\OneDrive\OneDriveStorageItemsCollection.cs" />
+    <Compile Include="Services\OneDrive\OneDriveStorageItemsEnumerator.cs" />
     <Compile Include="Services\Twitter\TwitterErrors.cs" />
     <Compile Include="Services\Twitter\TwitterException.cs" />
     <Compile Include="Services\Twitter\TwitterOAuthTokenType.cs" />
@@ -161,7 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Toolkit.Uwp\Microsoft.Toolkit.Uwp.csproj">
-      <Project>{805F80DF-75C6-4C2F-8FD9-B47F6D0DF5A3}</Project>
+      <Project>{805f80df-75c6-4c2f-8fd9-b47f6d0df5a3}</Project>
       <Name>Microsoft.Toolkit.Uwp</Name>
     </ProjectReference>
   </ItemGroup>
